--- a/.github/workflows/deployOnPush.yml
+++ b/.github/workflows/deployOnPush.yml
@@ -13,7 +13,7 @@ jobs:
       
       - uses: sfdx-actions/setup-sfdx@v1
         with:
-          sfdx-auth-url: ${{ secrets.AUTH_SECRET }}
+          sfdx-auth-url: ${{ secrets.AUTH_SECRET_SANDBOX }}
       - name: 'Convert Metadata'
         run: sfdx force:source:convert --rootdir=force-app --outputdir=convert
       - name: 'Deploy'
