--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -263,5 +263,9 @@
 		<members>*</members>
 		<name>Workflow</name>
 	</types>
+	<types>
+		<members>*</members>
+		<name>FlexiPage</name>
+	</types>
 	<version>46.0</version>
 </Package>
