--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -258,10 +258,14 @@
 	<types>
 		<members>*</members>
 		<name>TransactionSecurityPolicy</name>
-	</types>
-	<types>
-		<members>*</members>
-		<name>Workflow</name>
-	</types>
-	<version>46.0</version>
+		</types>
+		<types>
+        <members>*</members>
+        <name>Workflow</name>
+    </types>
+    <types>
+        <members>*</members>
+        <name>FlexiPage</name>
+    </types>
+    <version>50.0</version>
 </Package>
