--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -336,5 +336,9 @@
         <members>*</members>
         <name>FlexiPage</name>
 	</types>
+	<types>
+  <members>*</members>
+  <name>CustomField</name>
+</types>
 	<version>50.0</version>
 </Package>
